# subgroups

./: Cargo.toml  README.md  batch.sh
python/: launcher.py  main.py  plotter.py
src/: main.rs  results
src/category/: mod.rs  morphism.rs  object.rs  relation.rs
src/category/functors/: mod.rs  szymczak.rs
src/ralg/: matrix.rs  mod.rs  util.rs
src/ralg/cgroup/: ideal.rs  mod.rs
src/ralg/module/: direct.rs  map.rs  mod.rs  quotient.rs
src/ralg/module/canon/: element.rs  mark.rs  mod.rs  object.rs
src/ralg/ring/: ideal.rs  mod.rs
src/util/: bitmatrix.rs  category_of_relations.rs  mod.rs
