[package]
name = "szymczak_leray"
version = "0.1.0"
edition = "2021"

[package.metadata.incomplete]
torsion_coeff.rs = ["unused_variables", "dead_code"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
bitvec = "1.0.1"
itertools = "0.11"
typenum = "1.16"
dedup = { git = "https://github.com/orhid/dedup.rust", version = "0.1.0" }
seq-macro = "0.3.5"
paste = "1.0.14"
const_format = "0.2.32"
